--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -17,8 +17,8 @@
                     <h4 class="sf_title">Information</h4>
                     <ul>
                         <li><a href="#">Information livraison</a></li>
-                        <li><a href="#">Politique de confidentialité</a></li>
-                        <li><a href="#">Termes & Conditions</a></li>
+                        <li><a [routerLink]="['private-policy']">Politique de confidentialité</a></li>
+                        <li><a [routerLink]="['term']">Termes & Conditions</a></li>
                     </ul>
                 </div>
             </div> <!--  End Col -->
