--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -49,6 +49,13 @@
                 <div class="sigin-link">
                   <a routerLink="/sign-in">J'ai deja un compte?</a>
                 </div>
+                <br>
+                <div>
+                  <a [routerLink]="['private-policy']">Politique de confidentialité</a>
+                  <br>
+                  <a [routerLink]="['term']">Termes & Conditions</a>
+                </div>
+                <br>
          </form>
       </div>
     </mat-card-content>
