--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -57,16 +57,20 @@
             overlayColor="#00000040"
             [hideOverlay]="false"
           >
-            <div
-              style="width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center"
-            >
-              <button (click)='toBePartener()' 
-                mat-flat-button
-                
-              >
-                Click me!
-              </button>
-            </div>
+          </mat-carousel-slide>
+          <mat-carousel-slide
+            #matCarouselSlide
+            image='assets/images/miam.png'
+            overlayColor="#00000040"
+            [hideOverlay]="false"
+          >
+          </mat-carousel-slide>
+          <mat-carousel-slide
+            #matCarouselSlide
+            image='assets/images/livraison.png'
+            overlayColor="#00000040"
+            [hideOverlay]="false"
+          >
           </mat-carousel-slide>
         </mat-carousel>
         <!--<img src="https://i.ytimg.com/vi/8bXlyk0ITAE/maxresdefault.jpg" class="card-img" alt="..."> !-->
