--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -8,7 +8,7 @@
     width: 100%;
   }
   mat-card {
-    background-image: url('/assets/images/food.jpg');
+    background-image: url('https://firebasestorage.googleapis.com/v0/b/flutterfoodapp-aa0df.appspot.com/o/categories%2Ffood.jpg?alt=media&token=0047c161-d103-416b-99ef-d97506700847');
   }
   form {
     border-radius: 5px;
