--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -51,9 +51,9 @@
                 </div>
                 <br>
                 <div>
-                  <a [routerLink]="['private-policy']">Politique de confidentialité</a>
+                  <a [routerLink]="['/private-policy']">Politique de confidentialité</a>
                   <br>
-                  <a [routerLink]="['term']">Termes & Conditions</a>
+                  <a [routerLink]="['/term']">Termes & Conditions</a>
                 </div>
                 <br>
          </form>
