--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,7 +1,8 @@
 footer {
     background: black;
+    
 }
-
+mat-toolbar.mat-toolbar.mat-toolbar-single-row
 .fa {
     padding: 20px;
     font-size: 30px;    
