--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -71,26 +71,8 @@
             overlayColor="#00000040"
             [hideOverlay]="false"
           >
-<<<<<<< HEAD
-          </mat-carousel-slide>
-          <mat-carousel-slide
-            #matCarouselSlide
-            image='assets/images/miam.png'
-            overlayColor="#00000040"
-            [hideOverlay]="false"
-          >
-          </mat-carousel-slide>
-          <mat-carousel-slide
-            #matCarouselSlide
-            image='assets/images/livraison.png'
-            overlayColor="#00000040"
-            [hideOverlay]="false"
-          >
-=======
->>>>>>> pwa-branch
           </mat-carousel-slide>
         </mat-carousel>
-        <!--<img src="https://i.ytimg.com/vi/8bXlyk0ITAE/maxresdefault.jpg" class="card-img" alt="..."> !-->
       </div>
     </div>
     </div>
@@ -147,9 +129,6 @@
         <div  *ngFor="let item of foods | foodFilter: searchText as results" class="col-md-3">
           <app-food-card [item] = "item"></app-food-card>
         </div>  
-        <!--<div class="example-container mat-elevation-z2" [hidden]="foods.length" >
-          <h1 class="text-center">Aucun plat n'est present pour cette categorie</h1>
-        </div> !-->
       </div>
     </div>
   
@@ -163,8 +142,9 @@
             <h4>L'application Miam permet à n'importe qui d'utiliser un appareil mobile pour consulter le menu des meilleurs vendeurs et passer une commande pour une livraison à domicile.</h4>
           </div>
           <div class="download"> 
+            <a ></a>
             <img src = 'https://firebasestorage.googleapis.com/v0/b/flutterfoodapp-aa0df.appspot.com/o/categories%2Fandroid.png?alt=media&token=565ba874-56e9-4e08-b846-3526ef060efa' alt="application mobile" srcset="">
-            <img src="" alt="commande en ligne" srcset="">
+            <!--<img src="" alt="commande en ligne" srcset=""> !-->
           </div>
         </div>
         <div class="col-md-6 mobile">
