--- a/src/app/components/maps/maps.component.html
+++ b/src/app/components/maps/maps.component.html
@@ -1,7 +1,7 @@
 
 
 <h1 mat-dialog-title>Localisation </h1>
-<mat-dialog-content class="mat-typography">
+<!--<mat-dialog-content class="mat-typography">
     <agm-map [latitude]="lat" [longitude]="lng">
         <agm-direction 
                         [origin]="origin" 
@@ -11,7 +11,7 @@
                         (dragEnd)="markerDragEnd(origin, $event)">
         </agm-direction>
     </agm-map>
-</mat-dialog-content>
+</mat-dialog-content>!-->
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Retour</button>
   <button mat-button [mat-dialog-close]="" cdkFocusInitial>Ok</button>
