--- a/src/app/components/prompt-component/prompt-component.component.css
+++ b/src/app/components/prompt-component/prompt-component.component.css
@@ -7,29 +7,25 @@
     align-items: center;
   }
   
-  .ios-prompt {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    
+  :host {
+    opacity: 0.8;
 }
-        div {
-          text-align: center;
-          padding: 10px 25px 0;
-          background-color: #f44336;
-          
-        }
-        mat-icon {
-            position: relative;
-            top: -7px;
-            color: black;
-          }
-        img {
-          display: inline;
-        }
-  .close-ios-inv {
+.content {
+    margin: 0.5em;
+    text-align: center;
+}
+.full-width {
+    margin-top: 1em;
+    width: 100%;
+    text-align: center;
+}
+.link-close {
+    color: red;
+    font-variant-caps: all-petite-caps;
+    font-weight: bold;
+}
+.btn-close {
     position: absolute;
-    right: 0px;
-    top: 0;
-  }
+    top: 1em;
+    right: 1em;
+}
