--- a/src/app/components/food-card/food-card.component.html
+++ b/src/app/components/food-card/food-card.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-image">
-      <img class="img-size" alt="food" [lazyLoad] = "item.imagePath">
+      <img class="img-size" alt="food" src = "{{item.imagePath}}">
       <a class="btn-floating halfway-fab waves-effect waves-light red" (click)="openDialog(item)">
         <i class="material-icons">add_shopping_cart</i>
       </a>
