--- a/src/app/components/prompt-component/prompt-component.component.css
+++ b/src/app/components/prompt-component/prompt-component.component.css
@@ -1,6 +1,9 @@
 .ios {
     background-color: #f44336;
 }
+.icon-download {
+    color: #f44336;
+}
 .android-prompt {
     display: flex;
     justify-content: space-between;
