--- a/src/app/components/prompt-component/prompt-component.component.html
+++ b/src/app/components/prompt-component/prompt-component.component.html
@@ -11,9 +11,9 @@
     <div class="content">
       Pour installer l'application. 
       <br/>Tapez sur l'icon de partage ou share <br/><strong>Sous l'ecran d'accueil ou Add to homescreen</strong>.
-      <div class="full-width"><mat-icon>arrow_downward</mat-icon></div>
+      <div class="full-width"><mat-icon class="material-icons icon-download">system_update_alt</mat-icon></div>
     </div>
     <button class="btn-close" mat-icon-button (click)="close()" aria-label="Close">
-        <mat-icon>close</mat-icon>
+        <mat-icon class="material-icons icon-download">close</mat-icon>
     </button>
   </div>
