--- a/src/app/components/backorder/backorder.component.html
+++ b/src/app/components/backorder/backorder.component.html
@@ -66,7 +66,7 @@
               </h2>
               <h2><mat-icon class="material-icons contact" color="warn">
                 phone
-                </mat-icon>Numero: <span> {{order.customer.number}}</span>
+                </mat-icon>Numero: <span> {{order.customer.numero}}</span>
               </h2>
             </div>
             <table class ="table">
