--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -27,6 +27,9 @@
           <a mat-button  [routerLink]="['food']" *ngIf="currentUser !== null"> 
           Mes plats 
           </a> 
+          <a mat-button  [routerLink]="['order/deliverer']" *ngIf="currentUser !== null"> 
+          Livraison 
+          </a> 
           <a mat-button  [routerLink]="['account']" *ngIf="currentUser !== null"> 
           Mon compte 
           </a> 
