--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -103,7 +103,7 @@
       <div class="offre">
         <div ><h3 class="speciale">Offres spéciales</h3></div>
         <div  class="fast-food row">
-            <div *ngFor="let item of specialFoods | foodFilter: searchText" class="col-md-3">
+            <div *ngFor="let item of specialFoods | slice:0:8 | foodFilter: searchText" class="col-md-3">
               <app-food-card [item] = "item"></app-food-card>
             </div>  
         </div>
@@ -111,7 +111,7 @@
       <div class="offre">
         <div><h3 class="burkinabe">Cuisine burkinabe</h3> </div>
         <div class="fast-food row">
-          <div *ngFor="let item of burkinabeFoods | foodFilter: searchText" class="col-md-3">
+          <div *ngFor="let item of burkinabeFoods | slice:0:4 | foodFilter: searchText" class="col-md-3">
             <app-food-card [item] = "item"></app-food-card>
         </div>    
         </div>
