--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
         <div *ngFor="let item of categories" >
           <div class="row btn-item-cat" (click)="getNotificaton(item)">
               <div class="col-md-6 col-4 cat-img justify-content-center">
-                <img [lazyLoad]="item.image"
+                <img src="{{item.image}}"
                             alt="food" class="rounded-circle img-fluid">
                             <span> {{item.name}} </span>
               </div>
@@ -28,44 +28,22 @@
         </div>
     </div>
     <div class="col-md-8">
-      <div class="carde border-dark">
-        <mat-carousel
-          timings="250ms ease-in"
-          [autoplay]="true"
-          interval="3500"
-          color="warn"
-          maxWidth="auto"
-          proportion="49"
-          slides="3"
-          [loop]="true"
-          [hideArrows]="false"
-          [hideIndicators]="false"
-          [useKeyboard]="true"
-          [useMouseWheel]="false"
-          orientation="ltr"
-        >
-          <mat-carousel-slide
-            #matCarouselSlide
-            image='https://firebasestorage.googleapis.com/v0/b/flutterfoodapp-aa0df.appspot.com/o/partenaire%2Fpartenaire.png?alt=media&token=ecb3657b-36c0-4608-b108-9d2c0ea862f3'
-            overlayColor="#00000040"
-            [hideOverlay]="false"
-          >
-          </mat-carousel-slide>
-          <mat-carousel-slide
-            #matCarouselSlide
-            image='https://firebasestorage.googleapis.com/v0/b/flutterfoodapp-aa0df.appspot.com/o/partenaire%2Flivraison.png?alt=media&token=58c11842-0eb3-4142-b7f5-c86fe8f227a3'
-            overlayColor="#00000040"
-            [hideOverlay]="false"
-          >
-          </mat-carousel-slide>
-          <mat-carousel-slide
-            #matCarouselSlide
-            image='https://firebasestorage.googleapis.com/v0/b/flutterfoodapp-aa0df.appspot.com/o/partenaire%2Fmain1.png?alt=media&token=80e26f03-a7b3-43bb-82df-0c88298d2a75'
-            overlayColor="#00000040"
-            [hideOverlay]="false"
-          >
-          </mat-carousel-slide>
-        </mat-carousel>
+      <div class="carde border-dark" style="width: 920px; margin: auto">
+        <owl-carousel-o [options]="customOptions">
+      
+          <ng-container >
+            <ng-template carouselSlide [id]="1">
+              <img [src]="'https://firebasestorage.googleapis.com/v0/b/flutterfoodapp-aa0df.appspot.com/o/partenaire%2Fpartenaire.png?alt=media&token=ecb3657b-36c0-4608-b108-9d2c0ea862f3'" [alt]="" [title]="">
+            </ng-template>
+            <ng-template carouselSlide [id]="2">
+              <img [src]="'https://4.bp.blogspot.com/-lYWdESTawXs/Vwz88mGq3UI/AAAAAAAABeQ/_I5FVlZ6ZNYyCVGGcNMLCOepVvRvmkVAgCLcB/s1600/fastfood.jpg'" [alt]="" [title]="">
+            </ng-template>
+            <ng-template carouselSlide [id]="3">
+              <img [src]="'https://www.seriouseats.com/recipes/images/2015/07/20150702-sous-vide-hamburger-anova-primary-1500x1125.jpg'" [alt]="" [title]="">
+            </ng-template>
+          </ng-container>
+      
+        </owl-carousel-o>
       </div>
     </div>
     </div>
@@ -103,7 +81,7 @@
       <div class="offre">
         <div ><h3 class="speciale">Offres spéciales</h3></div>
         <div  class="fast-food row">
-            <div *ngFor="let item of specialFoods | slice:0:8 | foodFilter: searchText" class="col-md-3">
+            <div *ngFor="let item of specialFoods | foodFilter: searchText" class="col-md-3">
               <app-food-card [item] = "item"></app-food-card>
             </div>  
         </div>
@@ -111,7 +89,7 @@
       <div class="offre">
         <div><h3 class="burkinabe">Cuisine burkinabe</h3> </div>
         <div class="fast-food row">
-          <div *ngFor="let item of burkinabeFoods | slice:0:4 | foodFilter: searchText" class="col-md-3">
+          <div *ngFor="let item of burkinabeFoods | foodFilter: searchText" class="col-md-3">
             <app-food-card [item] = "item"></app-food-card>
         </div>    
         </div>
