text error fixed

--- a/src/app/components/customer-sign-up/customer-sign-up.component.html
+++ b/src/app/components/customer-sign-up/customer-sign-up.component.html
@@ -45,9 +45,9 @@
                 </mat-error>  
             </mat-form-field>
           </div>
-                <button mat-raised-button color="warn">Creer</button>
+                <button mat-raised-button color="warn">Créer</button>
                 <div class="sigin-link">
-                  <a routerLink="/sign-in">J'ai deja un compte?</a>
+                  <a routerLink="/sign-in">J'ai déja un compte ?</a>
                 </div>
                 <br>
                 <div>
