--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,8 +5,8 @@
                 <div class="single_ftr">
                     <h4 class="sf_title">Contacts</h4>
                     <ul>
-                        <li>hlm2, rue 79 villa 671, Dakar, Senegal</li>
-                        <li>(+221) 77 402 19 92 <br> (+064) 336 987 245</li>
+                        <li>Dassagho sect 43 Ouagadougou, Burkina Faso</li>
+                        <li>(+221) 77 602 34 83 <br> (+226) 71 85 17 70</li>
                         <li>Contact@referencentic.com</li>
                     </ul>
                 </div>
@@ -28,7 +28,7 @@
                 <div class="single_ftr">
                     <h4 class="sf_title">Newsletter</h4>
                     <div class="newsletter_form">
-                        <p>S'abonner a la newsletter pour recevoir nos offres en temps reels </p>
+                        <p>S'abonner a la newsletter pour recevoir nos offres en temps réels </p>
                         <form method="post" class="form-inline">                
                             <input name="EMAIL" id="email" placeholder="Enter Your Email" class="form-control" type="email">
                             <button  type="submit" mat-raised-button>S'abonner</button>
