--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -78,7 +78,7 @@
           [data]="foods"
           [(ngModel)]="searchText"
           [searchKeyword]="keyword"
-          placeHolder="Enter the State Name"
+          placeHolder="Entrez le nom du plat"
           historyIdentifier="states"
           [itemTemplate]="itemTemplate"
           (selected)='selectEvent($event)'
@@ -132,7 +132,7 @@
             <h1>Commander de la nourriture</h1>
           </div>
           <div class="description">
-            <h4>L'application Miam permet à n'importe qui d'utiliser un appareil mobile pour consulter le menu des meilleurs vendeurs et passer une commande pour une livraison à domicile.</h4>
+            <h4>L'application Miam permet à tout personne d'utiliser un tétéphone mobile ou ordinateur pour consulter les menus des meilleurs restaurants, passer une commande et se faire livrer à domicile.</h4>
           </div>
           <div class="download"> 
             <a ></a>
