--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -27,8 +27,8 @@
 
         </div>
         <div class="forgotPassword">
-          <a routerLink="/forgot-password">Mot de passe oubliez?</a>
-          <a routerLink="/sign-up">Creer un compte</a>
+          <a routerLink="/forgot-password">Mot de passe oublié ?</a>
+          <a routerLink="/sign-up">Créer un compte</a>
         </div>
       </form>
     </div>
