--- a/src/app/components/shopping-page/shopping-page.component.css
+++ b/src/app/components/shopping-page/shopping-page.component.css
@@ -16,7 +16,8 @@
     padding-bottom: 3%;
 }
 .container {
-    margin-top: 5%;
+    margin-top: 10%;
+    margin-bottom: 10%;
     box-shadow:
     0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048),
