text error fixed

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
                     <ul>
                         <li>Dassagho sect 43 Ouagadougou, Burkina Faso</li>
                         <li>(+221) 77 602 34 83 <br> (+226) 71 85 17 70</li>
-                        <li>Contact@referencentic.com</li>
+                        <li>contact@referencentic.com</li>
                     </ul>
                 </div>
             </div> <!--  End Col -->
