--- a/src/app/components/private-policy/private-policy.component.html
+++ b/src/app/components/private-policy/private-policy.component.html
@@ -165,7 +165,7 @@ L’entreprise peut modifier, mettre à jour et/ou remplacer cette Politique de 
         Moyens à disposition pour nous contacter  
     </li>
 </strong>
-Pour toute question ou plainte concernant la façon dont nous traitons vos données personnelles, veuillez nous contacter en envoyant un e-mail à fdc82.accueil@orange.fr Vous pouvez également avoir le droit de déposer une plainte auprès de l'autorité de surveillance concernant la manière dont nous traitons vos données personnelles. Toutefois, nous vous serions reconnaissants de bien vouloir nous donner l'opportunité de répondre à vos inquiétudes avant de vous adresser à l'autorité de surveillance et vous demandons donc de nous contacter en premier lieu.  
+Pour toute question ou plainte concernant la façon dont nous traitons vos données personnelles, veuillez nous contacter en envoyant un e-mail à contact@referencentic.com Vous pouvez également avoir le droit de déposer une plainte auprès de l'autorité de surveillance concernant la manière dont nous traitons vos données personnelles. Toutefois, nous vous serions reconnaissants de bien vouloir nous donner l'opportunité de répondre à vos inquiétudes avant de vous adresser à l'autorité de surveillance et vous demandons donc de nous contacter en premier lieu.  
 Nos coordonnées sont les suivantes :  
 Reference NTIC  
 HLM2, Rue 79, Villa 671, Dakar  
@@ -173,10 +173,11 @@ Tél : +221 77 402 19 92 / 77 602 34 83
 Mail : contact@referencentic.com  
  
  
- 
-<strong class="title">
-    Enregistrement et surveillance des appels 
-</strong> 
+<li>
+    <strong class="title">
+        Enregistrement et surveillance des appels 
+    </strong> 
+</li>
 Veuillez noter que vos appels, ainsi que les nôtres, sont susceptibles d'être enregistrés. Nous pouvons utiliser ces enregistrements afin de contrôler la qualité de notre service à la clientèle ou à des fins de conformité et afin de vérifier la précision des informations que vous nous communiquez, de lutter contre la fraude ou de former notre personnel. Nous conservons les enregistrements aussi longtemps que raisonnablement nécessaire afin de mener à bien ces opérations, puis nous les supprimons. Toute donnée personnelle obtenue de votre part au cours de l'appel sera traitée conformément aux dispositions de cette Politique de confidentialité.  
  
 ©2018. Tous droits réservés 
