text error fixed

--- a/src/app/components/private-policy/private-policy.component.html
+++ b/src/app/components/private-policy/private-policy.component.html
@@ -101,7 +101,7 @@ Nous recueillons des informations via les cookies et d'autres technologies simil
 Vous trouverez également des informations d'ordre général sur les cookies, y compris comment voir quels cookies sont installés sur votre appareil (mobile) et comment les gérer et les supprimer, sur des sites Web tels que www.allaboutcookies.org et www.youronlinechoices.com/fr.  
 <strong class="title">
     <li>
-        6. Vos droits  
+        Vos droits  
     </li>
 </strong>
 Vous pouvez vérifier, compléter et mettre à jour les informations que vous avez fournies dans la section « Paramètres » de votre compte. Vous pouvez également fermer votre compte sur le site de l’entreprise en nous contactant à l'aide des méthodes indiquées ci-après.  
