text error fixed

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
                 <div class="single_ftr">
                     <h4 class="sf_title">Contacts</h4>
                     <ul>
-                        <li>Dassagho sect 43 Ouagadougou, Burkina Faso</li>
+                        <li>Dassasgho sect 43 Ouagadougou, Burkina Faso</li>
                         <li>(+221) 77 602 34 83 <br> (+226) 71 85 17 70</li>
                         <li>contact@referencentic.com</li>
                     </ul>
