mat icon text showing

--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -15,6 +15,13 @@
     <li class="progress-step {{thirdStep}}">
         <div class="progress-marker" data-text="3"></div>
         <div class="progress-text">
+            <h4 class="progress-title">Livreur en route</h4>
+            <div></div>
+        </div>
+    </li>
+    <li class="progress-step {{fourth}}">
+        <div class="progress-marker" data-text="4"></div>
+        <div class="progress-text">
             <h4 class="progress-title">Livrer</h4>
             <div></div>
         </div>
