mat icon text showing

--- a/src/app/components/customer-order/customer-order.component.html
+++ b/src/app/components/customer-order/customer-order.component.html
@@ -28,6 +28,6 @@
 </div>
 <div class="container" *ngIf="tab.length==0">
     <div class="example-container mat-elevation-z2">
-      <h1 class="text-center">Votre panier est vide</h1>
+      <h1 class="text-center">Vous n'avez pas de commande</h1>
     </div>
 </div>
