checkout length of null fixed

--- a/src/app/components/progess-bar-modal/progess-bar-modal.component.html
+++ b/src/app/components/progess-bar-modal/progess-bar-modal.component.html
@@ -1,7 +1,7 @@
 <div class="title"> Etat de votre commande : {{orderId}}</div>
 <div class="progress">
 </div>
-<app-progress-bar [thirdStep] = 'thirdStep' [secondStep] = 'secondStep' [firstStep] = 'firstStep' ></app-progress-bar>
+<app-progress-bar [thirdStep] = 'thirdStep' [fourth] = 'fourth' [secondStep] = 'secondStep' [firstStep] = 'firstStep' ></app-progress-bar>
 <div class="">
     <div mat-dialog-content>
     </div>
